<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/open_header_CL"
    android:background="@color/navigation_menu_focus_out_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/search_LL"
        android:nextFocusLeft="@id/search_LL"
        android:nextFocusDown="@id/home_LL"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/search_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/search_IB"
            android:nextFocusLeft="@id/search_IB"
            android:nextFocusDown="@id/home_IB"
            />
        <TextView
            android:id="@+id/search_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/search"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/home_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/search_LL"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/search_LL"
        android:nextFocusLeft="@id/search_LL"
        android:nextFocusDown="@id/school_channel_ll"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/home_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/search_IB"
            android:nextFocusLeft="@id/search_IB"
            android:nextFocusDown="@id/school_IB"/>
        <TextView
            android:id="@+id/home_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/home"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/school_channel_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/home_LL"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/home_LL"
        android:nextFocusLeft="@id/home_LL"
        android:nextFocusDown="@id/thematic_channel_ll"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/school_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/home_IB"
            android:nextFocusLeft="@id/home_IB"
            android:nextFocusDown="@id/thematic_channel_IB"

            />
        <TextView
            android:id="@+id/school_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/school_channel"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/thematic_channel_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/school_channel_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/school_channel_ll"
        android:nextFocusLeft="@id/school_channel_ll"
        android:nextFocusDown="@id/free_channel_ll"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/thematic_channel_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/school_IB"
            android:nextFocusLeft="@id/school_IB"
            android:nextFocusDown="@id/free_channel_IB"/>
        <TextView
            android:id="@+id/thematic_channel_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/thematic_channel"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/free_channel_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/thematic_channel_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/thematic_channel_ll"
        android:nextFocusLeft="@id/thematic_channel_ll"
        android:nextFocusDown="@id/account_LL"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/free_channel_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/thematic_channel_IB"
            android:nextFocusLeft="@id/thematic_channel_IB"
            android:nextFocusDown="@id/account_IB"/>
        <TextView
            android:id="@+id/free_channel_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/free_channel"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/account_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/free_channel_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/free_channel_ll"
        android:nextFocusLeft="@id/free_channel_ll"
        android:nextFocusDown="@id/logout_LL"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/account_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/free_channel_IB"
            android:nextFocusLeft="@id/free_channel_IB"
            android:nextFocusDown="@id/logout_IB"/>
        <TextView
            android:id="@+id/account_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/account"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logout_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:focusable="false"
        android:padding="@dimen/dimens_10dp"
        app:layout_constraintTop_toBottomOf="@id/account_LL"
        app:layout_constraintStart_toStartOf="parent"
        android:nextFocusUp="@id/account_LL"
        android:nextFocusLeft="@id/account_LL"
        android:nextFocusDown="@id/logout_LL"
        >
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logout_IB"
            android:layout_width="@dimen/dimens_22dp"
            android:layout_height="@dimen/dimens_22dp"
            android:background="@color/transparent"
            android:tag="@string/Movies"
            app:srcCompat="@drawable/ic_movie_unselected"
            android:nextFocusUp="@id/account_IB"
            android:nextFocusLeft="@id/account_IB"
            android:nextFocusDown="@id/logout_IB"/>
        <TextView
            android:id="@+id/logout_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_17dp"
            android:fontFamily="monospace"
            android:text="@string/logout"
            android:textColor="#CECCD5"
            android:textSize="13sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>

